--- a/src/components/DataMessenger/DataMessenger.scss
+++ b/src/components/DataMessenger/DataMessenger.scss
@@ -5,6 +5,8 @@
 
   .react-autoql-notification-list-container {
     height: calc(100% - 60px);
+    padding-left: 15px;
+    padding-right: 3px;
   }
 
   .data-messenger-header-select {
