Expose ChatContent component for Autoql Management Api
- Enable ChatContent component to be exported from react-autoql package
- Update how autoql management api is used in DataAlertsModal by introducing projectId value to the autoqlConfig prop
- remove use of unused prop selectedDemoProjectId from DataAlertsModal
- refactor css classes in ChatContent.scss

--- a/src/components/ChatContent/ChatContent.scss
+++ b/src/components/ChatContent/ChatContent.scss
@@ -44,7 +44,7 @@
   background: transparent;
 }
 
-.react-autoql-drawer .watermark {
+.chat-bar-container .watermark {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -60,7 +60,7 @@
   }
 }
 
-.react-autoql-drawer .chat-drawer-chat-bar {
+.chat-bar-container .chat-drawer-chat-bar {
   flex-shrink: 0;
   flex-grow: 0;
   height: 60px;
