--- a/src/components/Card/CollapsableSection.scss
+++ b/src/components/Card/CollapsableSection.scss
@@ -1,9 +1,7 @@
 .react-autoql-card {
   background: var(--react-autoql-background-color-secondary);
   border-radius: 6px;
-  box-shadow: var(--react-autoql-box-shadow-1);
-  padding: 15px;
-  margin: 10px;
+  margin-top: 10px;
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -42,16 +40,16 @@
 
   .react-autoql-card-title {
     cursor: pointer;
-    padding: 0 10px;
     flex: 0 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-wrap: nowrap;
-    font-size: 18px;
-    margin: 4px 0px;
+    margin: 4px 5px;
+    font-size: 16px;
     font-weight: 600;
   }
+
   .react-autoql-card-subtitle {
     padding: 0px 10px 5px 10px;
     flex: 0 0 auto;
