--- a/src/components/Notifications/RuleSimple/RuleSimple.scss
+++ b/src/components/Notifications/RuleSimple/RuleSimple.scss
@@ -11,7 +11,8 @@
     white-space: pre;
   }
 
-  &.with-query-validation .react-autoql-rule-condition-select-input-container {
+  &.with-query-validation .react-autoql-rule-condition-select-input-container,
+  &.with-query-validation .react-autoql-rule-mult-factor-select-input-container {
     margin-bottom: 30px;
   }
 
@@ -70,7 +71,12 @@
       margin-bottom: 28px;
     }
 
-    .react-autoql-rule-condition-select-input-container {
+    .react-autoql-rule-mult-factor-select-input-container .react-autoql-input {
+      max-width: 65px;
+    }
+
+    .react-autoql-rule-condition-select-input-container,
+    .react-autoql-rule-mult-factor-select-input-container {
       display: flex;
       flex-direction: column;
       padding: 2px 0;
@@ -79,7 +85,7 @@
       transition-duration: 0.3s;
       transition-timing-function: ease;
       flex: 0 0 auto;
-      margin-right: 12px;
+      margin-right: 6px;
     }
 
     .react-autoql-rule-second-input-container {
